--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.27.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.7
-motor==3.3.2
+motor==3.1.1
+pymongo==4.3.3
 pydantic==1.10.13
 python-dotenv==1.0.1
